--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,28 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/com.springsource.org.aopalliance-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/javassist-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/mysql-connector-java-5.1.22-bin.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/slf4j-log4j12-1.7.2.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-aop-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-beans-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-context-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-core-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-expression-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-jdbc-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-orm-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-test-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-tx-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/home/esteban/workspace_eclipse/Lab03SpringClaseIngWeb2016/lib/spring-web-4.1.6.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
